--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">JewelryClassification</string>
+    <string name="select">Select Images</string>
+    <string name="images">View Images</string>
 </resources>
