Fab for share added and pinch and zoom functionality added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">JewelleryClassification</string>
     <string name="select">Select Images</string>
     <string name="images">View Images</string>
+    <string name="share">Share Image</string>
 </resources>
