App ready for deployment v1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">JewelleryClassification</string>
+    <string name="app_name">SRJ Images</string>
     <string name="select">Select Images</string>
     <string name="images">View Images</string>
     <string name="share">Share Image</string>
